// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Data Source|JobList Default 1`] = `
.c8 {
  display: none;
}

.c9 {
  margin-right: 20px;
}

.c10 {
  color: #FFF;
}

.c11 {
  color: #FFF;
}

.c0 {
  font-weight: normal;
  width: calc(100% - 50px);
}

.c3 {
  overflow: auto;
  max-height: calc(100vh - 70px);
  padding: 40px 0;
  -webkit-overflow-scrolling: touch;
}

.c4 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
  font-size: 24px;
  border-bottom: 2.4px solid #2F2F36;
  padding: 8px 0 13px;
}

.c5 a,
.c5 div {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: rgba(255,255,255,0.75);
  display: block;
}

.c6 {
  margin: 10px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  color: #FFF;
  font-size: 14px;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 12px 0;
}

.c1 {
  word-break: break-word;
}

.c2 {
  word-break: break-word;
}

.c20 {
  height: 155px;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c21 {
  bottom: 0;
  width: 100%;
  padding: 40px 0 36px;
  position: fixed;
  width: calc(100% - 40px);
  background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
}

.c23 {
  width: calc(50% - 5px);
  max-width: 240px;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #FFF;
  width: 100%;
  border-top: 2px solid #2F2F36;
  padding: 10px 0;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c18 {
  width: 7px;
  height: 7px;
  border-radius: 50%;
  margin-right: 10px;
  background-color: #FFF;
}

.c19 {
  cursor: pointer;
  min-width: 30px;
}

.c15 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 10px;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 10px;
  line-height: 18px;
}

.c16:last-child {
  width: 100%;
}

.c16:last-child .c17 {
  display: none;
}

@media (min-width:1050px) {
  .c8 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin: 60px 0 40px 0;
    min-height: 63px;
  }
}

@media (min-width:1050px) {
  .c0 {
    display: none;
  }
}

@media (min-width:1050px) {
  .c3 {
    padding-bottom: 20px;
    max-height: calc(100vh - 154px);
  }
}

@media (min-width:1050px) {
  .c22 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:1050px) {
  .c21 {
    position: fixed;
    width: calc(100% - 40px);
    background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
    width: 1000px;
  }
}

@media (min-width:1050px) {
  .c23 {
    width: 240px;
  }
}

@media (min-width:480px) {
  .c16:last-child {
    width: auto;
  }

  .c16:last-child .c17 {
    display: block;
  }
}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <style>
    
  body {
    color: #FFF;
    background-color: #000;
  }

  </style>
  <div
    className=""
  >
    <div
      className="c0"
    >
      <div
        style={
          Object {
            "alignItems": "flex-start",
            "color": "#FFF",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingBottom": "18px",
            "width": "100%",
          }
        }
      >
        <div>
          <div
            className=""
          >
            <h2
              className="c1"
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Past Versions
            </h2>
            <h1
              className="c2"
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Source
            </h1>
          </div>
        </div>
        <button
          disabled={false}
          id="topHeaderOpenMenuBtn"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": 6,
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 10 60"
          >
            <path
              d="M5 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
      <div
        style={
          Object {
            "backgroundColor": "#000",
            "color": "#FFF",
            "maxWidth": null,
            "minHeight": "100vh",
            "padding": "18px 20px 27px",
            "position": "absolute",
            "right": 0,
            "textAlign": "left",
            "top": 0,
            "transform": "translateX(100%)",
            "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
            "visibility": 0,
            "width": "100%",
            "zIndex": 9999,
          }
        }
      >
        <div
          className=""
        >
          <div
            className=""
          >
            <h2
              className="c1"
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Past Versions
            </h2>
            <h1
              className="c2"
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Source
            </h1>
          </div>
        </div>
        <div
          className="c3"
        >
          <div
            className="c4"
          >
            <div
              className="c5"
            >
              <a
                href="/project/"
                id="projectsNavBtn"
                onClick={[Function]}
              >
                Projects
              </a>
            </div>
            <div
              className="c5"
            >
              <a
                href="/user/"
                id="usersPageNavBtn"
                onClick={[Function]}
              >
                Users
              </a>
            </div>
            <div
              className="c5"
            >
              <a
                href="/project/1"
                id="projectDetailsNavBtn"
                onClick={[Function]}
              >
                Project details
              </a>
            </div>
            <div
              className="c5"
            >
              <a
                href="/project/1/datasource"
                id="dataSourceNavBtn"
                onClick={[Function]}
              >
                Data Sources
              </a>
            </div>
            <div
              className="c5"
            >
              <a
                href="/project/1/state"
                id="stateNavBtn"
                onClick={[Function]}
              >
                States
              </a>
            </div>
            <div
              className="c5"
            >
              <a
                href="/project/1/user"
                id="usersNavBtn"
                onClick={[Function]}
              >
                Project Users
              </a>
            </div>
            <div
              className="c5"
            >
              <a
                href="/project/1/folder"
                id="folderNavBtn"
                onClick={[Function]}
              >
                Pages
              </a>
            </div>
          </div>
          <div
            className="c4"
          >
            <div
              className="c5"
            >
              <a
                href="/settings"
                id="settingsNavBtn"
                onClick={[Function]}
              >
                Settings
              </a>
            </div>
            <div
              className="c5"
            >
              <div
                onClick={[Function]}
              >
                Log out
              </div>
            </div>
          </div>
          <div
            className="c6"
          >
            <a
              className="c7"
              href="/"
              id="aboutNavBtn"
              onClick={[Function]}
            >
              About Schema CMS
            </a>
            <a
              className="c7"
              href="/"
              id="apiNavBtn"
              onClick={[Function]}
            >
              API Doc
            </a>
            <a
              className="c7"
              href="/"
              id="repositoryNavBtn"
              onClick={[Function]}
            >
              GitHub Repository
            </a>
          </div>
        </div>
        <button
          disabled={false}
          id="topHeaderCloseMenuButton"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": "6px",
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="c8"
    >
      <div
        className="c9"
      >
        <h2
          className="c10"
          id="desktopHeaderTitle"
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 100,
              "margin": 0,
            }
          }
        >
          Past Versions
        </h2>
        <h1
          className="c11"
          id="desktopHeaderSubtitle"
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 600,
              "letterSpacing": "-0.12px",
              "lineHight": 1.25,
              "margin": 0,
            }
          }
        >
          Source
        </h1>
      </div>
      <div
        className=""
      />
    </div>
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
        }
      }
    >
      <div
        className="c12"
      >
        <div
          className="c13"
        >
          <div
            className="c14"
          >
            <div
              style={
                Object {
                  "color": "#FFF",
                  "display": "flex",
                  "flexDirection": "column",
                  "textAlign": "center",
                }
              }
            >
              <input
                aria-hidden={true}
                defaultChecked={false}
                id="job_option_revert-0"
                name="job_option_revert"
                onChange={[Function]}
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "hidden",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                  }
                }
                type="radio"
                value={1}
              />
              <label
                htmlFor="job_option_revert-0"
                style={
                  Object {
                    "cursor": "pointer",
                  }
                }
              >
                <div
                  style={
                    Object {
                      "alignItems": "center",
                      "border": "1px solid #FFF",
                      "borderRadius": "50%",
                      "display": "flex",
                      "height": "16px",
                      "justifyContent": "center",
                      "width": "16px",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "backgroundColor": "transparent",
                        "borderRadius": "50%",
                        "height": "8px",
                        "transition": "background 0.25s ease-in-out",
                        "width": "8px",
                      }
                    }
                  />
                </div>
              </label>
            </div>
            <label
              className="c15"
              htmlFor="job_option_revert-0"
            >
              <div
                className="c16"
              >
                <span
                  style={
                    Object {
                      "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                      "fontSize": "14px",
                    }
                  }
                >
                  Invalid Date
                </span>
              </div>
              <div
                className="c16"
              >
                <div
                  className="c17 c18"
                />
                <span
                  style={
                    Object {
                      "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                      "fontSize": "14px",
                    }
                  }
                >
                  Success
                </span>
              </div>
              <div
                className="c16"
              >
                <div
                  className="c17 c18"
                />
                <span
                  style={
                    Object {
                      "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                      "fontSize": "14px",
                    }
                  }
                >
                  Original file
                </span>
              </div>
            </label>
          </div>
          <svg
            className="c19"
            onClick={[Function]}
            style={
              Object {
                "height": "30px",
                "stroke": "#FFF",
                "width": "30px",
              }
            }
            viewBox="0 0 30 30"
          >
            <path
              d="M25.976 15.668l-.013.036a.536.536 0 01-.065.122C22.904 19.934 19.263 22 15 22s-7.904-2.066-10.898-6.174l-.022-.034a.515.515 0 01-.024-.043l.046.077a.52.52 0 01-.078-.158l-.004-.015a.57.57 0 01.007-.33.533.533 0 01.056-.12l-.042.083a.53.53 0 01.024-.052l.018-.031C7.073 10.415 10.722 8 15 8s7.927 2.415 10.917 7.203a.52.52 0 01.079.225.628.628 0 01-.016.225l-.004.015zM15 9c-3.995 0-7.398 2.252-10.237 6.797l.204-.322.028.037C7.781 19.178 11.107 21 15 21c3.906 0 7.241-1.834 10.032-5.524C22.235 11.146 18.9 9 15 9z"
            />
            <circle
              cx={15}
              cy={15}
              fill="none"
              r={4.5}
            />
          </svg>
        </div>
        <div
          className="c13"
        >
          <div
            className="c14"
          >
            <div
              style={
                Object {
                  "color": "#FFF",
                  "display": "flex",
                  "flexDirection": "column",
                  "textAlign": "center",
                }
              }
            >
              <input
                aria-hidden={true}
                defaultChecked={false}
                id="job_option_revert-1"
                name="job_option_revert"
                onChange={[Function]}
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "hidden",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                  }
                }
                type="radio"
                value={2}
              />
              <label
                htmlFor="job_option_revert-1"
                style={
                  Object {
                    "cursor": "pointer",
                  }
                }
              >
                <div
                  style={
                    Object {
                      "alignItems": "center",
                      "border": "1px solid #FFF",
                      "borderRadius": "50%",
                      "display": "flex",
                      "height": "16px",
                      "justifyContent": "center",
                      "width": "16px",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "backgroundColor": "transparent",
                        "borderRadius": "50%",
                        "height": "8px",
                        "transition": "background 0.25s ease-in-out",
                        "width": "8px",
                      }
                    }
                  />
                </div>
              </label>
            </div>
            <label
              className="c15"
              htmlFor="job_option_revert-1"
            >
              <div
                className="c16"
              >
                <span
                  style={
                    Object {
                      "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                      "fontSize": "14px",
                    }
                  }
                >
                  Invalid Date
                </span>
              </div>
              <div
                className="c16"
              >
                <div
                  className="c17 c18"
                />
                <span
                  style={
                    Object {
                      "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                      "fontSize": "14px",
                    }
                  }
                >
                  Success
                </span>
              </div>
              <div
                className="c16"
              >
                <div
                  className="c17 c18"
                />
                <span
                  style={
                    Object {
                      "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                      "fontSize": "14px",
                    }
                  }
                >
                  1 Step
                </span>
              </div>
            </label>
          </div>
          <svg
            className="c19"
            onClick={[Function]}
            style={
              Object {
                "height": "30px",
                "stroke": "#FFF",
                "width": "30px",
              }
            }
            viewBox="0 0 30 30"
          >
            <path
              d="M25.976 15.668l-.013.036a.536.536 0 01-.065.122C22.904 19.934 19.263 22 15 22s-7.904-2.066-10.898-6.174l-.022-.034a.515.515 0 01-.024-.043l.046.077a.52.52 0 01-.078-.158l-.004-.015a.57.57 0 01.007-.33.533.533 0 01.056-.12l-.042.083a.53.53 0 01.024-.052l.018-.031C7.073 10.415 10.722 8 15 8s7.927 2.415 10.917 7.203a.52.52 0 01.079.225.628.628 0 01-.016.225l-.004.015zM15 9c-3.995 0-7.398 2.252-10.237 6.797l.204-.322.028.037C7.781 19.178 11.107 21 15 21c3.906 0 7.241-1.834 10.032-5.524C22.235 11.146 18.9 9 15 9z"
            />
            <circle
              cx={15}
              cy={15}
              fill="none"
              r={4.5}
            />
          </svg>
        </div>
        <div
          className="c13"
        >
          <div
            className="c14"
          >
            <div
              style={
                Object {
                  "color": "#FFF",
                  "display": "flex",
                  "flexDirection": "column",
                  "textAlign": "center",
                }
              }
            >
              <input
                aria-hidden={true}
                defaultChecked={false}
                id="job_option_revert-2"
                name="job_option_revert"
                onChange={[Function]}
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "hidden",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                  }
                }
                type="radio"
                value={3}
              />
              <label
                htmlFor="job_option_revert-2"
                style={
                  Object {
                    "cursor": "pointer",
                  }
                }
              >
                <div
                  style={
                    Object {
                      "alignItems": "center",
                      "border": "1px solid #FFF",
                      "borderRadius": "50%",
                      "display": "flex",
                      "height": "16px",
                      "justifyContent": "center",
                      "width": "16px",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "backgroundColor": "transparent",
                        "borderRadius": "50%",
                        "height": "8px",
                        "transition": "background 0.25s ease-in-out",
                        "width": "8px",
                      }
                    }
                  />
                </div>
              </label>
            </div>
            <label
              className="c15"
              htmlFor="job_option_revert-2"
            >
              <div
                className="c16"
              >
                <span
                  style={
                    Object {
                      "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                      "fontSize": "14px",
                    }
                  }
                >
                  Invalid Date
                </span>
              </div>
              <div
                className="c16"
              >
                <div
                  className="c17 c18"
                />
                <span
                  style={
                    Object {
                      "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                      "fontSize": "14px",
                    }
                  }
                >
                  Failed
                </span>
              </div>
              <div
                className="c16"
              >
                <div
                  className="c17 c18"
                />
                <span
                  style={
                    Object {
                      "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                      "fontSize": "14px",
                    }
                  }
                >
                  1 Step
                </span>
              </div>
            </label>
          </div>
          <svg
            className="c19"
            onClick={[Function]}
            style={
              Object {
                "height": "30px",
                "stroke": "#FFF",
                "width": "30px",
              }
            }
            viewBox="0 0 30 30"
          >
            <path
              d="M25.976 15.668l-.013.036a.536.536 0 01-.065.122C22.904 19.934 19.263 22 15 22s-7.904-2.066-10.898-6.174l-.022-.034a.515.515 0 01-.024-.043l.046.077a.52.52 0 01-.078-.158l-.004-.015a.57.57 0 01.007-.33.533.533 0 01.056-.12l-.042.083a.53.53 0 01.024-.052l.018-.031C7.073 10.415 10.722 8 15 8s7.927 2.415 10.917 7.203a.52.52 0 01.079.225.628.628 0 01-.016.225l-.004.015zM15 9c-3.995 0-7.398 2.252-10.237 6.797l.204-.322.028.037C7.781 19.178 11.107 21 15 21c3.906 0 7.241-1.834 10.032-5.524C22.235 11.146 18.9 9 15 9z"
            />
            <circle
              cx={15}
              cy={15}
              fill="none"
              r={4.5}
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="c20"
    >
      <div
        className="c21"
      >
        <div
          className="c22"
        >
          <button
            className="c23"
            disabled={false}
            id="cancelBtn"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              }
            }
          >
            Cancel
          </button>
          <button
            className="c23"
            disabled={true}
            id="revertBtn"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "border": "none",
                "borderRadius": "48px",
                "color": "#71737e",
                "cursor": "default",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              }
            }
          >
            Revert
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Data Source|JobList No data 1`] = `
.c8 {
  display: none;
}

.c9 {
  margin-right: 20px;
}

.c10 {
  color: #FFF;
}

.c11 {
  color: #FFF;
}

.c0 {
  font-weight: normal;
  width: calc(100% - 50px);
}

.c3 {
  overflow: auto;
  max-height: calc(100vh - 70px);
  padding: 40px 0;
  -webkit-overflow-scrolling: touch;
}

.c4 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
  font-size: 24px;
  border-bottom: 2.4px solid #2F2F36;
  padding: 8px 0 13px;
}

.c5 a,
.c5 div {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: rgba(255,255,255,0.75);
  display: block;
}

.c6 {
  margin: 10px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  color: #FFF;
  font-size: 14px;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 12px 0;
}

.c1 {
  word-break: break-word;
}

.c2 {
  word-break: break-word;
}

.c13 {
  height: 155px;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c14 {
  bottom: 0;
  width: 100%;
  padding: 40px 0 36px;
  position: fixed;
  width: calc(100% - 40px);
  background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
}

.c16 {
  width: calc(50% - 5px);
  max-width: 240px;
}

.c12 {
  color: #FFF;
  text-align: center;
  padding: 50px 10px;
  font-weight: 200;
  font-size: 20px;
}

@media (min-width:1050px) {
  .c8 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin: 60px 0 40px 0;
    min-height: 63px;
  }
}

@media (min-width:1050px) {
  .c0 {
    display: none;
  }
}

@media (min-width:1050px) {
  .c3 {
    padding-bottom: 20px;
    max-height: calc(100vh - 154px);
  }
}

@media (min-width:1050px) {
  .c15 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:1050px) {
  .c14 {
    position: fixed;
    width: calc(100% - 40px);
    background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
    width: 1000px;
  }
}

@media (min-width:1050px) {
  .c16 {
    width: 240px;
  }
}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <style>
    
  body {
    color: #FFF;
    background-color: #000;
  }

  </style>
  <div
    className=""
  >
    <div
      className="c0"
    >
      <div
        style={
          Object {
            "alignItems": "flex-start",
            "color": "#FFF",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingBottom": "18px",
            "width": "100%",
          }
        }
      >
        <div>
          <div
            className=""
          >
            <h2
              className="c1"
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Past Versions
            </h2>
            <h1
              className="c2"
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Source
            </h1>
          </div>
        </div>
        <button
          disabled={false}
          id="topHeaderOpenMenuBtn"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": 6,
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 10 60"
          >
            <path
              d="M5 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
      <div
        style={
          Object {
            "backgroundColor": "#000",
            "color": "#FFF",
            "maxWidth": null,
            "minHeight": "100vh",
            "padding": "18px 20px 27px",
            "position": "absolute",
            "right": 0,
            "textAlign": "left",
            "top": 0,
            "transform": "translateX(100%)",
            "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
            "visibility": 0,
            "width": "100%",
            "zIndex": 9999,
          }
        }
      >
        <div
          className=""
        >
          <div
            className=""
          >
            <h2
              className="c1"
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Past Versions
            </h2>
            <h1
              className="c2"
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Source
            </h1>
          </div>
        </div>
        <div
          className="c3"
        >
          <div
            className="c4"
          >
            <div
              className="c5"
            >
              <a
                href="/project/"
                id="projectsNavBtn"
                onClick={[Function]}
              >
                Projects
              </a>
            </div>
            <div
              className="c5"
            >
              <a
                href="/user/"
                id="usersPageNavBtn"
                onClick={[Function]}
              >
                Users
              </a>
            </div>
            <div
              className="c5"
            >
              <a
                href="/project/1"
                id="projectDetailsNavBtn"
                onClick={[Function]}
              >
                Project details
              </a>
            </div>
            <div
              className="c5"
            >
              <a
                href="/project/1/datasource"
                id="dataSourceNavBtn"
                onClick={[Function]}
              >
                Data Sources
              </a>
            </div>
            <div
              className="c5"
            >
              <a
                href="/project/1/state"
                id="stateNavBtn"
                onClick={[Function]}
              >
                States
              </a>
            </div>
            <div
              className="c5"
            >
              <a
                href="/project/1/user"
                id="usersNavBtn"
                onClick={[Function]}
              >
                Project Users
              </a>
            </div>
            <div
              className="c5"
            >
              <a
                href="/project/1/folder"
                id="folderNavBtn"
                onClick={[Function]}
              >
                Pages
              </a>
            </div>
          </div>
          <div
            className="c4"
          >
            <div
              className="c5"
            >
              <a
                href="/settings"
                id="settingsNavBtn"
                onClick={[Function]}
              >
                Settings
              </a>
            </div>
            <div
              className="c5"
            >
              <div
                onClick={[Function]}
              >
                Log out
              </div>
            </div>
          </div>
          <div
            className="c6"
          >
            <a
              className="c7"
              href="/"
              id="aboutNavBtn"
              onClick={[Function]}
            >
              About Schema CMS
            </a>
            <a
              className="c7"
              href="/"
              id="apiNavBtn"
              onClick={[Function]}
            >
              API Doc
            </a>
            <a
              className="c7"
              href="/"
              id="repositoryNavBtn"
              onClick={[Function]}
            >
              GitHub Repository
            </a>
          </div>
        </div>
        <button
          disabled={false}
          id="topHeaderCloseMenuButton"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": "6px",
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="c8"
    >
      <div
        className="c9"
      >
        <h2
          className="c10"
          id="desktopHeaderTitle"
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 100,
              "margin": 0,
            }
          }
        >
          Past Versions
        </h2>
        <h1
          className="c11"
          id="desktopHeaderSubtitle"
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 600,
              "letterSpacing": "-0.12px",
              "lineHight": 1.25,
              "margin": 0,
            }
          }
        >
          Source
        </h1>
      </div>
      <div
        className=""
      />
    </div>
    <div
      className="c12"
    >
      No Data Found.
    </div>
    <div
      className="c13"
    >
      <div
        className="c14"
      >
        <div
          className="c15"
        >
          <button
            className="c16"
            disabled={false}
            id="cancelBtn"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              }
            }
          >
            Cancel
          </button>
          <button
            className="c16"
            disabled={true}
            id="revertBtn"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "border": "none",
                "borderRadius": "48px",
                "color": "#71737e",
                "cursor": "default",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              }
            }
          >
            Revert
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
